--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 version: "3.2"
 services:
+    #rabbitmq-server:
+    #    image: rabbitmq
+
+
     auth-service:
         build: ./auth-service
         # 'rabbitmq-server' will be available as a network reference inside this service 
         # and this service will start only after the RabbitMQ service has.
-        # depends_on:
-        #    - rabbitmq-server
+        #depends_on:
+        #   - rabbitmq-server
         # Keep it running.  
         tty: true
         # Map port 3000 on the host machine to port 3000 of the container.
